--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       docker_images:
-        description: '请填写docker镜像名称 多个用英文逗号分开'
+        description: '请填写 docker 镜像名称，多个用英文逗号分开'
         required: true
-        default: 'alpine:latest,debian:latest' 
+        default: 'alpine:latest,ubuntu:latest'  # 设置默认的 Docker 镜像列表
 
 jobs:
   pull_and_package:
@@ -26,15 +26,26 @@ jobs:
         done
 
     - name: Compress the TAR files
-      run: tar -czf arm64-images.tar.gz *-arm64.tar
+      run: |
+        tar_name=""
+        images="${{ github.event.inputs.docker_images }}"
+        IFS=',' read -r -a image_array <<< "$images"
+        for image in "${image_array[@]}"; do
+          tar_name="${tar_name} ${image//\//_}-arm64.tar"
+        done
+        tar -czf "${images//,/-}-arm64.tar.gz" $tar_name
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: docker-images-tar
-        path: arm64-images.tar.gz
-        retention-days: 1  # 将保留天数设置为 1 天 最多可设置90天
+        path: "${images//,/-}-arm64.tar.gz"
+        retention-days: 1  # 将保留天数设置为 1 天，最多可设置 90 天
 
     - name: Clean up intermediate files
       run: |
-        rm *-arm64.tar
+        images="${{ github.event.inputs.docker_images }}"
+        IFS=',' read -r -a image_array <<< "$images"
+        for image in "${image_array[@]}"; do
+          rm "${image//\//_}-arm64.tar"
+        done
