--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,26 +26,12 @@ jobs:
         done
 
     - name: Compress the TAR files
-      run: |
-        tar_name=""
-        images="${{ github.event.inputs.docker_images }}"
-        IFS=',' read -r -a image_array <<< "$images"
-        for image in "${image_array[@]}"; do
-          tar_name="${tar_name} ${image//\//_}-arm64.tar"
-        done
-        tar -czf "${images//,/-}-arm64.tar.gz" $tar_name
+      run: tar -czf "${image//\//_}-arm64.tar.gz" ${image//\//_}-arm64.tar
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: docker-images-tar
-        path: "${images//,/-}-arm64.tar.gz"
+        path: "${image//\//_}-arm64.tar.gz"
         retention-days: 1  # 将保留天数设置为 1 天，最多可设置 90 天
 
-    - name: Clean up intermediate files
-      run: |
-        images="${{ github.event.inputs.docker_images }}"
-        IFS=',' read -r -a image_array <<< "$images"
-        for image in "${image_array[@]}"; do
-          rm "${image//\//_}-arm64.tar"
-        done
