--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,4 @@ jobs:
         done
 
     - name: Compress the TAR files
-      run: tar -czf "${image//\//_}-arm64.tar.gz" ${image//\//_}-arm64.tar
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: docker-images-tar
-        path: "${image//\//_}-arm64.tar.gz"
-        retention-days: 1  # 将保留天数设置为 1 天，最多可设置 90 天
-
+      run: ls
