--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,5 @@ jobs:
 
     - name: Compress the TAR files
       run: |
-       for file in *.tar; do
-           tar -czf "${file%.tar}.tar.gz" "$file"
-       done
+        for file in *.tar; do tar -czf "${file%.tar}.tar.gz" "$file"; done
+  
