--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
-name: ARM64 Save Docker Image
+name: ARM64 Pull and Save Docker Image
 
 on:
   workflow_dispatch:
     inputs:
       docker_images:
-        description: '请填写 docker 镜像名称，多个用英文逗号分开'
+        description: '请填写docker镜像名称 多个用英文逗号分开'
         required: true
-        default: 'alpine:latest,ubuntu:latest'  # 设置默认的 Docker 镜像列表
+        default: 'alpine:latest,ubuntu:latest,ubuntu:22.04,ubuntu:20.04,debian:latest,debian:11'  # 设置默认的 Docker 镜像列表
 
 jobs:
   pull_and_package:
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Save Docker Images
+    - name: Pull Docker Images and Package
       run: |
         images="${{ github.event.inputs.docker_images }}"
         IFS=',' read -r -a image_array <<< "$images"
@@ -26,6 +26,8 @@ jobs:
         done
 
     - name: Compress the TAR files
+      run: tar -czf Docker-arm64-images.tar.gz *-arm64.tar
+
+    - name: Clean up intermediate files
       run: |
-        for file in *.tar; do tar -czf "${file%.tar}.tar.gz" "$file"; done
-  
+        rm *-arm64.tar
