--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: ARM64 Pull and Save Docker Image
+name: Save Docker Image
 
 on:
   workflow_dispatch:
@@ -16,18 +16,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Pull Docker Images and Package
+    - name: Docker Images
       run: |
         images="${{ github.event.inputs.docker_images }}"
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
           docker pull "${image}" --platform "linux/arm64"
           docker save "${image}" -o "${image//\//_}-arm64.tar"
+          docker pull "${image}" --platform "linux/amd64"
+          docker save "${image}" -o "${image//\//_}-amd64.tar"
         done
 
     - name: Compress the TAR files
-      run: tar -czf Docker-arm64-images.tar.gz *-arm64.tar
+      run: |
+        tar -czf Docker-arm64-images.tar.gz *-arm64.tar
+        tar -czf Docker-amd64-images.tar.gz *-amd64.tar
 
     - name: Clean up intermediate files
       run: |
         rm *-arm64.tar
+        rm *-amd64.tar
