--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,35 @@ jobs:
 
     - name: Compress the TAR files
       run: |
-        tar -czf Docker-arm64-images.tar.gz *-arm64.tar
-        tar -czf Docker-amd64-images.tar.gz *-amd64.tar
+        tar -czvf Docker-arm64-images.tar.gz *-arm64.tar
+        tar -czvf Docker-amd64-images.tar.gz *-amd64.tar
 
+    - name: set key
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.GIT_PRIVATE_KEY }}
+      run: |
+        mkdir -p ~/.ssh
+        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+        chmod 600 ~/.ssh/id_ed25519
+        echo "StrictHostKeyChecking no" >> ~/.ssh/config
+        
+    - name: Push Web server
+      env:
+        SECRET_CHECK_SCRIPT_URL: ${{ secrets.SECRET_CHECK_SCRIPT_URL }}
+      run: rsync -avz ./Docker-* ${SECRET_CHECK_SCRIPT_URL}
+
+    - name: upload artifact amd64
+      uses: actions/upload-artifact@v4
+      with:
+          name: Docker-amd64-images
+          path: Docker-amd64-images.tar.gz
+          
+    - name: upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+          name: Docker-arm64-images
+          path: Docker-amd64-images.tar.gz
+          
     - name: Clean up intermediate files
       run: |
         rm *-arm64.tar
