--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Save Docker Image
+name: Sync Docker Image
 
 on:
   workflow_dispatch:
@@ -6,11 +6,11 @@ on:
       docker_images:
         description: '请填写docker镜像名称 多个用英文逗号分开'
         required: true
-        default: 'alpine:latest,ubuntu:latest,ubuntu:22.04,ubuntu:20.04,debian:latest,debian:11'  # 设置默认的 Docker 镜像列表
+        default: 'alpine:latest,ubuntu:latest,ubuntu:22.04,ubuntu:20.04,debian:latest,debian:11'
 
 jobs:
-  pull_and_package:
-    runs-on: ubuntu-latest
+  sync-docker-images:
+    runs-on: ubuntu-20
 
     steps:
     - name: Checkout repository
@@ -27,11 +27,6 @@ jobs:
           docker save "${image}" -o "${image//\//_}-amd64.tar"
         done
 
-    - name: Compress the TAR files
-      run: |
-        tar -czvf Docker-arm64-images.tar.gz *-arm64.tar
-        tar -czvf Docker-amd64-images.tar.gz *-amd64.tar
-
     - name: set key
       env:
         SSH_PRIVATE_KEY: ${{ secrets.GIT_PRIVATE_KEY }}
@@ -45,19 +40,7 @@ jobs:
       env:
         SECRET_CHECK_SCRIPT_URL: ${{ secrets.SECRET_CHECK_SCRIPT_URL }}
       run: rsync -avz ./*64.tar "$SECRET_CHECK_SCRIPT_URL"
-
-    - name: upload artifact amd64
-      uses: actions/upload-artifact@v4
-      with:
-          name: Docker-amd64-images
-          path: Docker-amd64-images.tar.gz
-          
-    - name: upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-          name: Docker-arm64-images
-          path: Docker-arm64-images.tar.gz
-          
+         
     - name: Clean up intermediate files
       run: |
         rm *-arm64.tar
