--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,12 @@ jobs:
           docker pull "${image}" --platform "linux/amd64"
           docker save "${image}" -o "${image//\//_}-amd64.tar"
         done
-
+        
+    - name: Compress the TAR files
+      run: |
+        chmod +x compress_tar.sh
+        ./compress_tar.sh
+        
     - name: set key
       env:
         SSH_PRIVATE_KEY: ${{ secrets.GIT_PRIVATE_KEY }}
@@ -39,7 +44,7 @@ jobs:
     - name: Push Web server
       env:
         SECRET_CHECK_SCRIPT_URL: ${{ secrets.SECRET_CHECK_SCRIPT_URL }}
-      run: rsync -avz ./*64.tar "$SECRET_CHECK_SCRIPT_URL"
+      run: rsync -avz ./*.tar.gz "$SECRET_CHECK_SCRIPT_URL"
          
     - name: Clean up intermediate files
       run: |
