--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,11 @@ on:
       docker_images:
         description: '请填写docker镜像名称 多个用英文逗号分开'
         required: true
-        default: 'alpine:latest,ubuntu:latest,ubuntu:22.04,ubuntu:20.04,debian:latest,debian:11'
+        default: 'alpine:latest,debian:latest,debian:11,ubuntu:latest,ubuntu:22.04,ubuntu:20.04'
 
 jobs:
   sync-docker-images:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -45,7 +45,19 @@ jobs:
       env:
         SECRET_CHECK_SCRIPT_URL: ${{ secrets.SECRET_CHECK_SCRIPT_URL }}
       run: rsync -avz ./*.tar.gz "$SECRET_CHECK_SCRIPT_URL"
-         
+      
+    - name: upload artifact amd64
+      uses: actions/upload-artifact@v4
+      with:
+          name: Docker-amd64-images
+          path: ./*amd64.tar.gz
+          
+    - name: upload artifact arm64 
+      uses: actions/upload-artifact@v4
+      with:
+          name: Docker-arm64-images
+          path: ./*arm64.tar.gz 
+          
     - name: Clean up intermediate files
       run: |
         rm *-arm64.tar
