--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,11 @@ jobs:
         images="${{ github.event.inputs.docker_images }}"
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
-          docker pull "${image}" --platform "linux/arm64"
-          docker save "${image}" -o "${image//\//_}-arm64.tar"
           docker pull "${image}" --platform "linux/amd64"
           docker save "${image}" -o "${image//\//_}-amd64.tar"
         done
+    #      #docker pull "${image}" --platform "linux/arm64"
+    #      #docker save "${image}" -o "${image//\//_}-arm64.tar"
         
     - name: Compress the TAR files
       run: |
@@ -52,11 +52,11 @@ jobs:
           name: Docker-amd64-images
           path: ./*amd64.tar.gz
           
-    - name: upload artifact arm64 
-      uses: actions/upload-artifact@v4
-      with:
-          name: Docker-arm64-images
-          path: ./*arm64.tar.gz 
+    #- name: upload artifact arm64 
+    #  uses: actions/upload-artifact@v4
+    #  with:
+    #      name: Docker-arm64-images
+    #      path: ./*arm64.tar.gz 
           
     - name: Clean up intermediate files
       run: |
